--- a/lab-pv-system/src/index.html
+++ b/lab-pv-system/src/index.html
@@ -6,6 +6,9 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- GOOGLE MAPS SCRIPT AND API KEY -->
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBPjGl2gNhiKKSYPHszXhKVorueDEwYyMg&callback"
+  type="text/javascript"></script>
 </head>
 <body>
   <app-root></app-root>
