--- a/lab-pv-system/src/index.html
+++ b/lab-pv-system/src/index.html
@@ -10,7 +10,7 @@
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBPjGl2gNhiKKSYPHszXhKVorueDEwYyMg&callback"
   type="text/javascript"></script>
 </head>
-<body style="background-color:whitesmoke;" oncontextmenu="return false;">
+<body style="background-color:black;" oncontextmenu="return false;">
   <app-root></app-root>
 </body>
 </html>
