--- a/lab-pv-system/src/index.html
+++ b/lab-pv-system/src/index.html
@@ -7,10 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- GOOGLE MAPS SCRIPT AND API KEY -->
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBPjGl2gNhiKKSYPHszXhKVorueDEwYyMg&callback"
-  type="text/javascript"></script>
+  <script async="" defer="" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBPjGl2gNhiKKSYPHszXhKVorueDEwYyMg&amp;callback" type="text/javascript"></script>
+  <link rel="manifest" href="manifest.webmanifest">
+  <link rel="manifest" href="manifest.json">
+  <meta name="theme-color" content="#1976d2">
 </head>
 <body style="background-color:black;" oncontextmenu="return false;">
   <app-root></app-root>
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 </html>
